<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TransportApplication</string>
    <string name="action_settings">Settings</string>
    <string name="main_text_head">TransportApp</string>
    <string name="main_button_logout">Logout</string>
    <string name="main_button_my_job">My jobs</string>
    <string name="main_button_search">Search</string>
    <string name="main_button_profile">Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_text_username">Username</string>
    <string name="login_text_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>
    <string name="title_activity_registration">Registration</string>
    <string name="registration_text_name">First Name</string>
    <string name="registration_text_surname">Last Name</string>
    <string name="registration_text_username">Username</string>
    <string name="registration_text_email">e-mail</string>
    <string name="register_button_register">Submit</string>
    <string name="profile_button_edit">Edit profile</string>
    <string name="profile_button_update">Update profile</string>
    <string name="title_activity_categories">Choose Category</string>
    <string name="main_button_categories">Categories</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="item_text_name">DEFAULT ITEM NAME</string>
    <string name="item_text_bid">Current lowest bid:</string>
    <string name="item_text_bid_value">DEFAULT</string>
    <string name="item_text_description">DEFAULT DESCRIPTION</string>
    <string name="item_button_place_bid">Place bid!</string>
    <string name="item_edit_bid_hint">Enter your bid…</string>
    <string name="title_activity_item_list">Jobs</string>
    <string name="title_activity_my_jobs">My Jobs</string>
    <string name="registration_text_password">Password</string>
    <string name="profile_text_new_password">New password</string>
    <string name="profile_text_repeat_new_password">Repeat new password</string>
    <string name="api_alert_dialog_title">Warning!</string>
    <string name="api_alert_dialog_body">There was an issue with receiving data from server. This is commonly related to your network connection. Please check that you have access to the Internet.</string>
    <string name="title_activity_jobs_bids">My Activities</string>
    <string name="title_activity_my_bids">My Bids</string>
    <string name="my_jobs">My Jobs</string>
    <string name="my_bids">My Bids</string>
    <string name="item_button_current_bids">View Current Bids</string>
    <string name="title_activity_bids_list">Bids</string>
    <string name="item_text_expiration_date">Expiration date:</string>
    <string name="my_jobs_new_job">New Job</string>
    <string name="title_activity_new_job">Create New Job</string>
    <string name="text_new_job_category">Category</string>
    <string name="button_new_job">New Job</string>
    <string name="new_job_name">Name</string>
    <string name="new_job_description">Description</string>
    <string name="new_job_date">Bidding duration (days):</string>
    <string name="new_job_description_hint">Enter Description</string>
    <string name="new_job_name_hint">Enter job name...</string>
    <string name="new_job_button_create">Submit</string>
    <string name="profile_text_contact">Contact number</string>
    <string name="profile_text_company_name">Company name</string>
    <string name="login_app_name">TransportApp</string>
    <string name="title_activity_contact">User Contacts</string>
    <string name="contact_username">\"username\"</string>
    <string name="contact_number">\"tel number\"</string>
    <string name="contact_company">\"company name\"</string>
    <string name="contact_email">\"e-mail\"</string>
    <string name="contact_surname">\"surname\"</string>
    <string name="contact_name">\"first name\"</string>

</resources>
