<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hr.tvz.zavrsni.transportapplication.JobActivity"
    android:background="@color/accent_material_light">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/textJobName"
        android:text="@string/item_text_name"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:id="@+id/textJobBid"
        android:text="@string/item_text_bid"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/textJobName"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:id="@+id/textJobBidValue"
        android:text="@string/item_text_bid_value"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/textJobName"
        android:layout_toRightOf="@+id/textJobBid"
        android:layout_toEndOf="@+id/textJobBid"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:id="@+id/textJobDescription"
        android:text="@string/item_text_description"
        android:gravity="fill_horizontal"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/textJobBid"
        android:textSize="20sp"
        android:scrollbars="vertical"/>

    <Button
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:id="@+id/buttonCurrentBids"
        android:text="@string/item_button_current_bids"
        android:layout_below="@+id/textJobDescription"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:onClick="onClickCurrentBids"
        />

    <Button
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:id="@+id/buttonJobPlaceBid"
        android:text="@string/item_button_place_bid"
        android:layout_below="@+id/textJobDescription"
        android:layout_toRightOf="@+id/editJobBid"
        android:layout_toEndOf="@+id/editJobBid"
        android:gravity="center"
        />

    <EditText
        android:layout_width="140sp"
        android:layout_height="50sp"
        android:id="@+id/editJobBid"
        android:hint="@string/item_edit_bid_hint"
        android:layout_below="@+id/textJobDescription"
        android:layout_marginStart="50sp"
        android:layout_marginLeft="50sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="numberDecimal"
        />
</RelativeLayout>
