<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/md_cyan_200">

    <TextView
        android:id="@+id/textHead"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/main_text_head"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHead"
        android:gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/buttonProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/main_button_profile"
            android:gravity="bottom|center"
            android:background="@drawable/ic_profile"
            android:textColor="@color/md_white_1000"
            android:onClick="onClickProfile"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/buttonCategories"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/main_button_categories"
            android:gravity="bottom|center"
            android:background="@drawable/ic_categories"
            android:textColor="@color/md_white_1000"
            android:onClick="onClickCategories"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/buttonMyJob"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/main_button_my_job"
            android:gravity="bottom|center"
            android:background="@drawable/ic_job"
            android:textColor="@color/md_white_1000"
            android:onClick="onClickMyJobs"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/buttonLogout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/main_button_logout"
            android:gravity="bottom|center"
            android:background="@drawable/ic_logout"
            android:textColor="@color/md_white_1000"
            android:onClick="onClickLogout"/>

        </LinearLayout>


</RelativeLayout>
