<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hr.tvz.zavrsni.transportapplication.JobsBidsActivity"
    android:background="@color/accent_material_light">

    <Button
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:id="@+id/buttonJobNewJob"
        android:text="@string/my_jobs_new_job"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:onClick="onClickNewJob"
        android:layout_marginTop="150sp"
        />

    <Button
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:id="@+id/buttonMyJobs"
        android:text="@string/my_jobs"
        android:gravity="center"
        android:layout_below="@+id/buttonJobNewJob"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:onClick="onClickJobs"
        />

    <Button
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:id="@+id/buttonMyBids"
        android:text="@string/my_bids"
        android:layout_below="@+id/buttonMyJobs"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:onClick="onClickBids"
        />

</RelativeLayout>
