<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hr.tvz.zavrsni.transportapplication.LoginActivity"
    android:background="@color/accent_material_light">

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/abc_primary_text_material_dark"
        android:gravity="center"
        android:text="@string/login_text_username"
        android:layout_marginTop="100dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/abc_primary_text_material_dark"
        android:gravity="center"
        android:layout_below="@+id/textUsername"
        android:paddingTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/abc_primary_text_material_dark"
        android:gravity="center_horizontal"
        android:text="@string/login_text_password"
        android:layout_below="@+id/inputUsername"
        android:paddingTop="30dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/abc_primary_text_material_dark"
        android:gravity="center_horizontal"
        android:layout_below="@+id/textPassword"
        android:paddingTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/buttonLogin"
        android:text="@string/login_button_login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_below="@+id/inputPassword"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:text="@string/login_button_register"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginTop="25dp"
        android:onClick="onClickRegistration"/>

</RelativeLayout>
